add more lenses, modified price interpolation to give it USD currency

--- a/app/lenses/available-lenses.component.html
+++ b/app/lenses/available-lenses.component.html
@@ -32,7 +32,7 @@
       <td>{{lens.fLength}}</td>
       <td>{{lens.description}}</td>
       <td>{{lens.location}}</td>
-      <td>{{lens.price}}</td>
+      <td>{{lens.price | currency:'USD':true:'2.2-2'}}</td>
     </tr>
   </tbody>
 </table>
