--- a/resources/styles/base/_index.scss
+++ b/resources/styles/base/_index.scss
@@ -3,6 +3,8 @@
 @import 'variables';
 
 
+
+
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 
 /**
@@ -22,6 +24,7 @@ html {
 
 body {
   margin: 0;
+  font-family: 'Dosis', sans-serif;
 }
 
 /* HTML5 display definitions
