--- a/app/home/welcome.component.html
+++ b/app/home/welcome.component.html
@@ -1,4 +1,5 @@
 <div class="welcome-header">
-  <h1>Welcome to Share Lenses</h1>
-  <h3>Lend and rent lenses from your fellow PDX photographers</h3>
+  <h1>SHARE <img src="app/images/icon.png">LENSES</h1>
+  <h3>With our local photographers</h3>
+  <h5>There's a lens for everyone</h5>
 </div>
