--- a/app/shared/thumbs.component.html
+++ b/app/shared/thumbs.component.html
@@ -2,10 +2,10 @@
     [style.width.px]="thumbsWidth"
     [title]="rating">
     <div style="width: 86px">
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <span class="glyphicon glyphicon-thumbs-up"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
     </div>
 </div>
