--- a/resources/styles/layout/_available-lenses.scss
+++ b/resources/styles/layout/_available-lenses.scss
@@ -5,3 +5,63 @@ tr {
     height: auto;
   }
 }
+
+.subheader {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+//NEW LENS==============
+.newLenses {
+  text-align: center;
+}
+
+.newLensSection {
+  margin: 50px auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.row .col {
+  padding: 0;
+  margin: 20px auto;
+}
+
+.submit-button {
+  display: flex;
+}
+
+.welcome-header{
+  h1{
+    text-align: center;
+    font-size: 6em;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    margin: 0;
+    color: white;
+    display: block;
+    background: rgba(0, 0, 0, .25);
+  }
+  img {
+    border-style: none;
+    width: 50px;
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+  h3 {
+    color: white;
+    text-align: center;
+    background: rgba(0,0,0,.6);
+}
+  h5 {
+    text-align: center;
+    color: white;
+    background: rgba(0,0,0, .3);
+  }
+}
+
+.filterBox {
+  display: flex;
+
+}
