--- a/app/lenses/lens-detail.component.html
+++ b/app/lenses/lens-detail.component.html
@@ -1,4 +1,7 @@
-<a class="waves-effect waves-light btn" (click)="onBack()">Back</a>
 <div class="lens-details">
-  {{pageTitle}}
+  <h1>{{pageTitle}}</h1>
 </div>
+<div class=row>
+{{lens.location}}
+</div>
+<a class="waves-effect waves-light btn" (click)="onBack()">Back</a>
